# hacker-simulator

./: CMakeLists.txt
.github/workflows/: android.yml
src/: game.cpp  graphics.cpp  hacking.cpp  hacking.hpp  main.cpp  mobile.hpp  mobile_ui.cpp  story.cpp  systems.cpp  types.hpp
